--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,18 +30,21 @@ SET(SOURCES
 add_executable(crn-server ${SOURCES} main.cpp)
 add_executable(crn-client ${SOURCES} client.cpp)
 add_executable(crn-gen ${SOURCES} generator.cpp)
+add_executable(crn-init ${SOURCES} init.cpp)
 add_executable(crn-manager ${SOURCES} manager.cpp)
 add_executable(crn-experiment ${SOURCES} experiment.cpp)
 
 target_link_libraries(crn-server     ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-client     ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-gen        ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(crn-init       ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-manager    ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-experiment ${CryptoPP_LIBRARIES} ${ZeroMQ_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 
 target_include_directories(crn-server     PUBLIC ${INCLUDE_DIRS})
 target_include_directories(crn-client     PUBLIC ${INCLUDE_DIRS})
 target_include_directories(crn-gen        PUBLIC ${INCLUDE_DIRS})
+target_include_directories(crn-init       PUBLIC ${INCLUDE_DIRS})
 target_include_directories(crn-manager    PUBLIC ${INCLUDE_DIRS})
 target_include_directories(crn-experiment PUBLIC ${INCLUDE_DIRS})
 
