- rename db to storage because it conflicts with berkeleydb 's own C header file db.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(SOURCES
     sources/group.cpp
     sources/utils.cpp
     sources/block.cpp
-    sources/db.cpp
+    sources/storage.cpp
     sources/server.cpp
     sources/session.cpp
     sources/packets.cpp
