--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(crn SHARED ${SOURCES})
 add_executable(crn-init    init.cpp)
 add_executable(crn-manager manager.cpp)
 add_executable(crn-server  main.cpp)
+add_executable(crn-read    read.cpp)
 add_executable(rough  rough.cpp)
 
 target_link_libraries(crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
@@ -39,6 +40,7 @@ target_link_libraries(crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_
 target_link_libraries(crn-server     crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-init       crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(crn-manager    crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(crn-read       crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 target_link_libraries(rough    crn ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
 
 target_include_directories(crn PUBLIC ${INCLUDE_DIRS})
@@ -47,3 +49,4 @@ install(TARGETS crn         RUNTIME DESTINATION lib)
 install(TARGETS crn-server  RUNTIME DESTINATION bin)
 install(TARGETS crn-init    RUNTIME DESTINATION bin)
 install(TARGETS crn-manager RUNTIME DESTINATION bin)
+install(TARGETS crn-read    RUNTIME DESTINATION bin)
