- FIXED: secret not recovered correctly always - FIXED: inconsistency while storing signed and unsigned integers (which is the reason of the issue)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ SET(SOURCES
     sources/blocks/passive.cpp
     sources/blocks/params.cpp
     sources/blocks/access.cpp
+    sources/blocks/contents.cpp
+    sources/blocks/addresses.cpp
     sources/storage.cpp
     sources/server.cpp
     sources/session.cpp
