- renaming from crn to cbtl

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(crn-3rdparty)
+project(cbtl-3rdparty)
 
 set(AZMQ_NO_TESTS OFF)
 add_subdirectory(azmq)
