--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 project(cbtl)
 
 find_package(CryptoPP REQUIRED)
-find_package(BerkeleyDB REQUIRED)
+# find_package(BerkeleyDB REQUIRED)
 find_package(hiredis REQUIRED)
 find_package(PQXX REQUIRED)
 find_package(nlohmann_json REQUIRED)
@@ -50,13 +50,20 @@ add_executable(cbtl-server  main.cpp)
 add_executable(cbtl-read    read.cpp)
 # add_executable(rough       rough.cpp)
 
-target_link_libraries(cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES} ${HIREDIS_LIBRARIES})
+# target_link_libraries(cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES} ${HIREDIS_LIBRARIES})
+target_link_libraries(cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES} ${HIREDIS_LIBRARIES})
 
-target_link_libraries(cbtl-server     cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
-target_link_libraries(cbtl-init       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES})
-target_link_libraries(cbtl-request    cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
-target_link_libraries(cbtl-read       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
-# target_link_libraries(rough          cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+# target_link_libraries(cbtl-server     cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+# target_link_libraries(cbtl-init       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES})
+# target_link_libraries(cbtl-request    cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+# target_link_libraries(cbtl-read       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+# # target_link_libraries(rough          cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} ${BerkeleyDB_LIBRARIES} nlohmann_json::nlohmann_json)
+
+target_link_libraries(cbtl-server     cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(cbtl-init       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json ${PQXX_LIBRARIES})
+target_link_libraries(cbtl-request    cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(cbtl-read       cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json)
+# target_link_libraries(rough          cbtl ${CryptoPP_LIBRARIES} ${Boost_LIBRARIES} nlohmann_json::nlohmann_json)
 
 target_compile_features(cbtl         PRIVATE cxx_std_20)
 target_compile_features(cbtl-init    PRIVATE cxx_std_20)
